Fixed overflow at mobile sizes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,7 +131,7 @@ $mq-breakpoints: (
                 transform: translateX(-200px);
             }
             &.right {
-                transform: translateX(200px);
+                transform: translateY(-100px);
             }
             &.fade-up {
                 opacity: 1;
@@ -182,6 +182,12 @@ $mq-breakpoints: (
 
             @include mq($from: tablet) {
                 flex: 1 1 45%;
+
+                &-card {
+                    &.right {
+                        transform: translateX(200px);
+                    }
+                }
             }
             @include mq($from: desktop) {
                 flex: 1 1 25%;
@@ -260,7 +266,7 @@ $mq-breakpoints: (
                 transform: translateX(-200px);
             }
             &.right {
-                transform: translateX(200px);
+                transform: translateY(-100px);
             }
             &.fade-up {
                 opacity: 1;
@@ -294,6 +300,12 @@ $mq-breakpoints: (
             }
             @include mq($from: tablet) {
                 flex: 0 1 45%;
+
+                &-item {
+                    &.right {
+                        transform: translateX(200px);
+                    }
+                }    
             }
             @include mq($from: desktop) {
                 flex: 0 1 30%;
